RESPONSIVE : fix some style effected when work on mobile mode

--- a/sass/sections/_attendances.scss
+++ b/sass/sections/_attendances.scss
@@ -2,6 +2,8 @@
 @import '../responsive';
 
 .container--attendances {
+  overflow: scroll;
+
   header {
     .lec-info {
       padding: 2rem 2.5rem;
