--- a/sass/sections/_subjects.scss
+++ b/sass/sections/_subjects.scss
@@ -97,11 +97,14 @@
   }
 
   .buttons-box {
-    width: 80%;
-    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    padding: 10%;
+
     @include tablet-portrait {
       display: none;
-      // display: flex;
       width: 300px;
       margin: 0;
       padding: 1rem 0.5rem;
